deployments/kustomize/kratos/overlays/minikube/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: kratos
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
