deployments/kustomize/kratos/overlays/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-ingress
  namespace: web3
  annotations:
    cert-manager.io/cluster-issuer: "local-ca-issuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kratos.web3-local-dev.com
        - kratos-admin.web3-local-dev.com
      secretName: kratos-tls
  rules:
    - host: kratos.web3-local-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos-public
                port:
                  number: 4433
    - host: kratos-admin.web3-local-dev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kratos-admin
                port:
                  number: 4434
